--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="diia"></div>
-    
+        <div class="diia">
+            <div class="diia_background">
+                <img src="img/Dia_text.png" alt="Diia_text" id="Diia_text">
+                <img src="img/Dia_flag.png" alt="Diia_flag" id="Diia_flag">
+            </div>
+        </div>
+        <div class="opendata">
+            <div class="opendata_background">
+                <img src="img/opendata_Blue.png" alt="opendata_blue" id="opendata_blue">
+                <img src="img/opendata_Glyph.png" alt="opendata_glyph" id="opendata_glyph">
+            </div>
+        </div>
+        <div class="white_border_styling">
+            <div class="opendata_mod">
+                <div class="opendata_mod_background">
+                    <img src="img/opendata_Blue.png" alt="opendata_mod_blue" id="opendata_mod_blue">
+                    <img src="img/opendata_Glyph.png" alt="opendata_mod_glyph" id="opendata_mod_glyph">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
