updated third logo

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         <div class="white_border_styling">
             <div class="opendata_mod">
                 <div class="opendata_mod_background">
-                    <img src="img/opendata_Blue.png" alt="opendata_mod_blue" id="opendata_mod_blue">
-                    <img src="img/opendata_Glyph.png" alt="opendata_mod_glyph" id="opendata_mod_glyph">
+                    <img src="img/opendata_mod_Blue.png" alt="opendata_mod_blue" id="opendata_mod_blue">
+                    <img src="img/opendata_mod_Glyph.png" alt="opendata_mod_glyph" id="opendata_mod_glyph">
                 </div>
             </div>
         </div>
     </div>
 </body>
+<footer></footer>
 </html>
